--- a/content/terrain.html
+++ b/content/terrain.html
@@ -1,38 +1,134 @@
 <h2>Terrain</h2>
 
-<p class="lead">Terrain introduction...</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="lead">Terrain in Epic Armageddon Ragnarök</p>
+<p> In Epic Armageddon, certain types of terrain have become much more common than others, simply because some types typically contribute to balanced games, while others tend to favor certain types of armies over others.
+    For this reason a revised Terrain Effects table can be found below (player-placed terrain such as Bunkers, Trenches etc. are covered by the Fortified Positions special rule.)</p>
+<p class="lead">Terrain Effects</p>
+
+<p><i>Line of Sight</i>: All terrain that blocks line of sight counts as being taller than all units unless otherwise specified. Units that are popped up are able to see beyond such terrain, but can only see targets that are further away from the intervening terrain than they are.</p>
+
+<p><i>God Machine</i>: Units with the God Machine special rule are so tall that they are considered to be popped up for Line of Sight purposes. If targeted while being behind such cover, they are also considered to be Hull Down from any non-popped up shooting. </p>
+
+<p><i>Hills and Cliffs</i>: Units that are even partially on a Hill or a Cliff counts as being popped up for Line of Sight purposes.</p>
+
+<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to vehicles or War Engines that are less than 50% visible to all units in the firing formation./p>
+
+<p><i>Area Terrain</i>: </p>
+
+<p><i>Roads</i>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on a road at the start of their action, you may declare they will make a road action. The formation may attempt to do an Engage, Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in the formation must remain on the road during the entire action.</p>
+
+<p><i>Skimmers, Support Craft and Impassable Terrain</i>: Skimmers and Support Craft can move over Impassable Terrain, but cannot stop there, not even if the terrain type does not block Line of Sight.</p>
+
+<p><i>Cover from AV, H-AV and WE</i>: INF units counts as being in cover and receive the -1 to hit modifier (but no cover save) if they are touching a friendly Armoured Vehicle or War Engine, to represent their ability to take cover from enemy fire by crouching behind the vehicle. There can be no more than two units for each Armoured Vehicle, four for each H-AV, or two for each DC that a War Engine has.</p>
 
 <table class="table table-striped">
     <thead>
     <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Handle</th>
+        <th scope="col">Terrain Type</th>
+        <th scope="col">INF</th>
+        <th scope="col">AV</th>
+        <th scope="col">War Engines</th>
+        <th scope="col">Blocks Line of Sight</th>
     </tr>
     </thead>
     <tbody>
     <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
+        <th scope="row">Urban Area</th>
+        <td>5+ Cover Save</td>
+        <td>No Effect, and no cover modifier</td>
+        <td>No Effect, and no cover modifier</td>
+        <td>Yes</td>
     </tr>
     <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
+        <th scope="row">Ruined Area</th>
+        <td>4+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>Dangerous</td>
+        <td>Yes</td>
     </tr>
     <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
+        <th scope="row">Wooded Area</th>
+        <td>5+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>Dangerous</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Marsh Area</th>
+        <td>5+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>Dangerous</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Scrub Area</th>
+        <td>6+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>No Effect</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Jungle Area</th>
+        <td>4+ Cover Save, Dangerous</td>
+        <td>Impassable</td>
+        <td>Dangerous</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Open Ground</th>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Road (See special rules)</th>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Hill (See special rules)</th>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Stream / River</th>
+        <td>6+ Cover Save, Dangerous</td>
+        <td>No Effect</td>
+        <td>No Effect</td>
+        <td>No</td>
+    </tr>
+    <tr>
+        <th scope="row">Large Building</th>
+        <td>4+ Cover Save</td>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Impassable Terrain: Mountain</th>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Impassable Terrain: Lake / Lava Field</th>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>No</td>
+    <tr>
+        <th scope="row">Impassable Terrain: Cliff (see special rules)</th>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Yes</td>
+        </tr>
     </tr>
     </tbody>
 </table>
@@ -40,24 +136,6 @@
 
 <h3>Optional Terrain Rules</h3>
 <p>
-    Some types of terrain are much more common than others, due to the unbalancing influence that certain types of terrain can have on the game.
-    For this reason, here are a set of optional/expanded general terrain rules and concepts (Certain types of player-placed terrain such as Bunkers, Trenches etc. are covered by the Fortified Positions special rule.))
-
-    Abstract Terrain:
-
-    Armoured Vehicles:
-
-    Impassable Terrain:
-
-    Hills:
-
-    Open Ground:
-
-    Roads:
-
-    Terrain Line of Sight:
-
-
     INF                       AV                            WE                  Blocks Line of Sight
     Urban (Abstract Terrain):   4+ Cover Save            Cover Save, Dangerous          Impassable          Yes
     Buildings:                  4+ Cover Save            Impassable                     Impassable          Yes
