--- a/site.html
+++ b/site.html
@@ -30,13 +30,16 @@
             <a class="nav-link" href="content/rules.html">Rules</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="content/armies.html?filter=approved">Armies</a>
+            <a class="nav-link" href="content/armies.html">Armies</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="content/scenarios.html">Scenarios</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="content/terrain.html">Terrain</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="content/online.html">Online Gaming</a>
         </li>
     </ul>
 
