--- a/content/rules.html
+++ b/content/rules.html
@@ -28,19 +28,19 @@
 <h6>Formations mixing BP and standard weapons</h6>
 <p>
     As far as we understand there are no rules defining how things work when a formation fires both BP and standard
-    weapons. We suggest the following house-rule: A formation can chose to fire it's BP weapons brefore or after any
-    ordinary weapons has been fired. This includes Macro and Titan Killer BP weapons (an exception to the
-    macro-goes-last rule). Resolve the BP shooting as a separate phase i.e. allocate and resolve hits from the BP weapon
+    weapons. We suggest the following house-rule: A formation can chose to fire it's BP weapons before or after any
+    non-BP weapons has been fired. This includes Macro and Titan Killer BP weapons (an exception to the
+    macro-always-goes-last rule). Resolve the BP shooting as a separate phase i.e. allocate and resolve hits from the BP weapon
     before moving on to ordinary weapons. Hits from ordinary weapons should be allocated front-to-back, as usual. This
-    means that units that were hit by the BP weapon and survived can be allocated a second hit from the standard
-    weapons.
+    means that units that were hit by the BP weapon and survived can be allocated a second hit from standard
+    shooting.
 </p>
 
 <h6>Maximize the effect of special rules when shooting</h6>
 <p>
     There are cases where some of the weapons fired has special rules while others don't. It could be Tau Railgun
-    Hammerheads (where some of the AT fire has <i>lance</i>) or a Baneblade where one of the weapons has <i>ignore
-    cover</i>. Hits are (as always) allocated from the front to the back but if it matters how the hits with special
+    Hammerheads (where some of the AT fire has <i>Lance</i>) or a Baneblade where one of the weapons has <i>Ignore
+    Cover</i>. Hits are (as always) allocated from the front to the back but if it matters how the hits with special
     rules are allocated, if should be done to favor of the shooting formation. E.g. A Baneblade fires at orks, where
     three orks are in the open while the rest is in a house (4+ cover save). The Baneblade fires all its weapons into
     cover (to be able to hit all the Orks). It scores four AP hits without special rules and one with the <i>ignore
@@ -52,14 +52,14 @@
     <i>lance</i>.
 </p>
 
-<h6>Disembarking & embarking on a ground transport</h6>
+<h6>Disembarking & embarking ground transports</h6>
 <p>
     When disembarking from a transport the disembarking unit should be placed within 5cm of the transport. Only a part
-    of the model needs to be within 5cm of the transport vehicle not the whole model. When embarking on a ground
+    of the model needs to be within 5cm of the transport vehicle, not the whole model. When embarking on a ground
     transport the transport needs to touch the unit it is picking up.
 </p>
 
-<h6>Disembarking & embarking on an air transport</h6>
+<h6>Disembarking & embarking air transports</h6>
 <p>
     When disembarking from an air transport the disembarking unit should be placed within 5cm (or 15cm if the unit has
     <i>jump packs</i>) of the transport. Only a part of the model needs to be within 5cm (or 15cm) of the transport
@@ -94,9 +94,8 @@
 
 <h6>Always roll for critical hits</h6>
 <p>
-    Some critical hit effects on war engines affects units around them. In case a critical effect might affect
-    units around them you should always roll for critical hits. The players may not chose to not roll for
-    critical hits in any situation where the critical hit may affect units or formations around the war engine.
+    Players must always roll for critical hits in any situation where the critical hit may affect units or formations around the war engine,
+    even if the War Engine was reduced to 0 DC before crits have been rolled for.
 </p>
 
 <h6>Blocking Wraithgates and other portals</h6>
@@ -117,11 +116,7 @@
     Terrain and War Engines are "infinitely high" to ground units with regards to line of sight. No ground unit can see
     directly through a piece of terrain – unless they are in it. Popped up skimmers can see over terrain, but can only
     see units that are further away from the edge of the terrain piece than they are. Same rule as for popped up
-    skimmers also apply for units on hills. Aircrafts can always see over all terrain.
+    skimmers also apply for units on hills. Aircrafts can always see over all terrain. In addition, see the 'Terrain' section on this website.
 </p>
 
 <h6>TODO: WE transport transporting units, separate formations, may intermingle?</h6>
-
-
-
-
