--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -56,23 +56,28 @@
         <td>30-2</td>
     </tr>
     <tr>
-        <th scope="row">Major Victory</th>
+        <th scope="row">Complete Victory</th>
         <td>Lead of 6 points</td>
         <td>28-4</td>
     </tr>
     <tr>
-        <th scope="row">Victory</th>
+        <th scope="row">Major Victory</th>
         <td>Lead of 5 points</td>
         <td>26-6</td>
     </tr>
     <tr>
-        <th scope="row">Minor Victory</th>
+        <th scope="row">Victory</th>
         <td>Lead of 4 points</td>
         <td>24-8</td>
     </tr>
     <tr>
+        <th scope="row">Minor Victory</th>
+        <td>Lead of 3 points</td>
+        <td>22-10</td>
+    </tr>
+    <tr>
         <th scope="row">Winning Draw</th>
-        <td>Lead of 2-3 points</td>
+        <td>Lead of 2 points</td>
         <td>18-14</td>
     </tr>
     <tr>
