--- a/content/terrain.html
+++ b/content/terrain.html
@@ -7,13 +7,15 @@
 
 <p><i>Line of Sight</i>: All terrain that blocks line of sight counts as being taller than all units unless otherwise specified. Units that are popped up are able to see beyond such terrain, but can only see targets that are further away from the intervening terrain than they are.</p>
 
-<p><i>God Machine</i>: Units with the God Machine special rule are so tall that they are considered to be popped up for Line of Sight purposes. If targeted while being behind such cover, they are also considered to be Hull Down from any non-popped up shooting. </p>
+<p><i>God Machine</i>: Units with the God Machine special rule are so tall that they are considered to be always popped up for Line of Sight purposes. Like  with other popped up units, they may never claim Hull Down from intervening terrain, or while inside terrain. God Machines counts as being taller than all terrain pieces, and will block line of sight even to units that are popped up, including God Machines on hills. </p>
 
 <p><i>Hills and Cliffs</i>: Units that are even partially on a Hill or a Cliff counts as being popped up for Line of Sight purposes.</p>
 
-<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to vehicles or War Engines that are less than 50% visible to all units in the firing formation./p>
+<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to vehicles or War Engines that are less than 50% visible to all units in the firing formation.</p>
 
-<p><i>Area Terrain</i>: </p>
+<p><i>Dangerous Terrain</i>: Roll a D6 when you enter dangerous terrain, or when you start to move if already in dangerous terrain. On a roll of 1, the unit is destroyed with no save allowed, but the formation it is part of does not receive a Blast marker. Units may choose to move through dangerous terrain cautiously. A unit that is moving cautiously counts as having a speed of 5cm, but is allowed to re-roll any Dangerous Terrain tests that it fails. </p>
+
+<p><i>Difficult Terrain</i>: As Dangerous Terrain, but units take damage on a 7+ instead of a 6+. Units with the 'Walker' special rule, or that moves carefully, completely ignores Difficult Terrain.</p>
 
 <p><i>Roads</i>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on a road at the start of their action, you may declare they will make a road action. The formation may attempt to do an Engage, Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in the formation must remain on the road during the entire action.</p>
 
@@ -35,8 +37,8 @@
     <tr>
         <th scope="row">Urban Area</th>
         <td>5+ Cover Save</td>
-        <td>No Effect, and no cover modifier</td>
-        <td>No Effect, and no cover modifier</td>
+        <td>Difficult</td>
+        <td>Difficult</td>
         <td>Yes</td>
     </tr>
     <tr>
@@ -45,6 +47,13 @@
         <td>Dangerous</td>
         <td>Dangerous</td>
         <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Craters</th>
+        <td>4+ Cover Save</td>
+        <td>Dangerous</td>
+        <td>Dangerous</td>
+        <td>No</td>
     </tr>
     <tr>
         <th scope="row">Wooded Area</th>
@@ -63,14 +72,21 @@
     <tr>
         <th scope="row">Scrub Area</th>
         <td>6+ Cover Save</td>
-        <td>Dangerous</td>
+        <td>No Effect, but no cover modifier</td>
+        <td>No Effect, but no cover modifier</td>
+        <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Field Area</th>
+        <td>6+ Cover Save</td>
+        <td>No Effect</td>
         <td>No Effect</td>
         <td>No</td>
     </tr>
     <tr>
         <th scope="row">Jungle Area</th>
-        <td>4+ Cover Save, Dangerous</td>
-        <td>Impassable</td>
+        <td>4+ Cover Save, Difficult</td>
+        <td>Dangerous</td>
         <td>Dangerous</td>
         <td>Yes</td>
     </tr>
@@ -89,16 +105,16 @@
         <td>No</td>
     </tr>
     <tr>
-        <th scope="row">Hill (See special rules)</th>
+        <th scope="row">Hill (Flat) (See special rules)</th>
         <td>No Effect</td>
         <td>No Effect</td>
         <td>No Effect</td>
         <td>Yes</td>
     </tr>
     <tr>
-        <th scope="row">Stream / River</th>
-        <td>6+ Cover Save, Dangerous</td>
-        <td>No Effect</td>
+        <th scope="row">River</th>
+        <td>6+ Cover Save, Difficult</td>
+        <td>Difficult</td>
         <td>No Effect</td>
         <td>No</td>
     </tr>
@@ -110,20 +126,20 @@
         <td>Yes</td>
     </tr>
     <tr>
-        <th scope="row">Impassable Terrain: Mountain</th>
+        <th scope="row">Mountain</th>
         <td>Impassable</td>
         <td>Impassable</td>
         <td>Impassable</td>
         <td>Yes</td>
     </tr>
     <tr>
-        <th scope="row">Impassable Terrain: Lake / Lava Field</th>
+        <th scope="row">Lake / Lava Field</th>
         <td>Impassable</td>
         <td>Impassable</td>
         <td>Impassable</td>
         <td>No</td>
     <tr>
-        <th scope="row">Impassable Terrain: Cliff (see special rules)</th>
+        <th scope="row">Steep Hill (see special rules)</th>
         <td>Impassable</td>
         <td>Impassable</td>
         <td>Impassable</td>
