BL and EC logs and various tweaks

--- a/content/terrain.html
+++ b/content/terrain.html
@@ -1,21 +1,20 @@
 <h2>Terrain</h2>
 
 <p class="lead">Terrain in Epic Armageddon Ragnarök</p>
-<p> In Epic Armageddon, certain types of terrain have become much more common than others, simply because some types typically contribute to balanced games, while others tend to favor certain types of armies over others.
-    For this reason a revised Terrain Effects table can be found below (player-placed terrain such as Bunkers, Trenches etc. are covered by the Fortified Positions special rule.)</p>
+<p> In Epic Armageddon, certain types of terrain have become much more common than others, simply because some types typically contribute to balanced games, while others tend to favor certain types of armies over others. For this reason a revised Terrain Effects table can be found below (player-placed terrain such as Bunkers, Trenches etc. are covered by the Fortified Positions special rule).</p>
 <p class="lead">Terrain Effects</p>
 
 <p><i>Line of Sight</i>: All terrain that blocks line of sight counts as being taller than all units unless otherwise specified. Units that are popped up are able to see beyond such terrain, but can only see targets that are further away from the intervening terrain than they are.</p>
 
-<p><i>God Machine</i>: Units with the God Machine special rule are so tall that they are considered to be always popped up for Line of Sight purposes. Like  with other popped up units, they may never claim Hull Down from intervening terrain, or while inside terrain. God Machines counts as being taller than all terrain pieces, and will block line of sight even to units that are popped up, including God Machines on hills. </p>
+<p><i>God Machines</i>: Units with the God Machine special rule are so tall that they are considered to be always 'popped up' for Line of Sight purposes. As with other popped up units, they may never claim Hull Down from intervening terrain, even while inside terrain. God Machines counts as being taller than all terrain pieces, and will block line of sight even to units that are popped up, including God Machines on hills. </p>
 
-<p><i>Hills and Cliffs</i>: Units that are even partially on a Hill or a Cliff counts as being popped up for Line of Sight purposes.</p>
+<p><i>Hills</i>: Hills are a special terrain type that both blocks line of sight, but is also possbile to mount. This means that units that are even partially on a Hill counts as being popped up for Line of Sight purposes.</p>
 
-<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to vehicles or War Engines that are less than 50% visible to all units in the firing formation.</p>
+<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to units that are even partially obscured to all units in the firing formation.</p>
 
 <p><i>Dangerous Terrain</i>: Roll a D6 when you enter dangerous terrain, or when you start to move if already in dangerous terrain. On a roll of 1, the unit is destroyed with no save allowed, but the formation it is part of does not receive a Blast marker. Units may choose to move through dangerous terrain cautiously. A unit that is moving cautiously counts as having a speed of 5cm, but is allowed to re-roll any Dangerous Terrain tests that it fails. </p>
 
-<p><i>Difficult Terrain</i>: As Dangerous Terrain, but units take damage on a 7+ instead of a 6+. Units with the 'Walker' special rule, or that moves carefully, completely ignores Difficult Terrain.</p>
+<p><i>Difficult Terrain</i>: As Dangerous Terrain, but units take damage on a 7+ instead of a 6+. Units that has the 'Walker' special rule, or that moves cautiously, completely ignores Difficult Terrain.</p>
 
 <p><i>Roads</i>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on a road at the start of their action, you may declare they will make a road action. The formation may attempt to do an Engage, Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in the formation must remain on the road during the entire action.</p>
 
@@ -72,8 +71,8 @@
     <tr>
         <th scope="row">Scrub Area</th>
         <td>6+ Cover Save</td>
-        <td>No Effect, but no cover modifier</td>
-        <td>No Effect, but no cover modifier</td>
+        <td>No Effect, and no cover modifier</td>
+        <td>No Effect, and no cover modifier</td>
         <td>Yes</td>
     </tr>
     <tr>
@@ -105,11 +104,19 @@
         <td>No</td>
     </tr>
     <tr>
-        <th scope="row">Hill (Flat) (See special rules)</th>
+        <th scope="row">Flat Hillside (See special rules)</th>
         <td>No Effect</td>
         <td>No Effect</td>
         <td>No Effect</td>
         <td>Yes</td>
+    </tr>
+    <tr>
+        <th scope="row">Steep Hillside (see special rules)</th>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Impassable</td>
+        <td>Yes</td>
+        </tr>
     </tr>
     <tr>
         <th scope="row">River</th>
@@ -138,13 +145,5 @@
         <td>Impassable</td>
         <td>Impassable</td>
         <td>No</td>
-    <tr>
-        <th scope="row">Steep Hill (see special rules)</th>
-        <td>Impassable</td>
-        <td>Impassable</td>
-        <td>Impassable</td>
-        <td>Yes</td>
-        </tr>
-    </tr>
     </tbody>
 </table>
