--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -56,7 +56,7 @@
         <td>30-2</td>
     </tr>
     <tr>
-        <th scope="row">Complete Victory</th>
+        <th scope="row">Outright Victory</th>
         <td>Lead of 6 points</td>
         <td>28-4</td>
     </tr>
