Terrain, online gaming, tweaks

--- a/content/scenarios/fire.html
+++ b/content/scenarios/fire.html
@@ -31,7 +31,7 @@
     same turn that it lands.
 </p>
 
-<p>The "Break their spirit" VC is worth 3 points once. The Blitz objective is worth 2 points each turn. All other objectives are worth 1 point each turn.
+<p>The "Break Their Spirit" VC is worth 2 points once. The Blitz objective is worth 2 points each turn. All other objectives are worth 1 point each turn.
     These points accumulate from the first turn onwards.</p>
 
 <p>The game ends after three turns, or if either player manages to accumulate a lead of 8 VP in any turn.</p>
