--- a/content/terrain.html
+++ b/content/terrain.html
@@ -10,13 +10,15 @@
 
 <p><i>Hills</i>: Hills are a special terrain type that both blocks line of sight, but is also possbile to mount. This means that units that are even partially on a Hill counts as being popped up for Line of Sight purposes.</p>
 
-<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to units that are even partially obscured to all units in the firing formation.</p>
+<p><i>Hull Down</i>: All terrain that blocks Line of Sight can give Hull Down to units that are inside such terrain, or even partially obscured behind it to all units in the firing formation.</p>
 
 <p><i>Dangerous Terrain</i>: Roll a D6 when you enter dangerous terrain, or when you start to move if already in dangerous terrain. On a roll of 1, the unit is destroyed with no save allowed, but the formation it is part of does not receive a Blast marker. Units may choose to move through dangerous terrain cautiously. A unit that is moving cautiously counts as having a speed of 5cm, but is allowed to re-roll any Dangerous Terrain tests that it fails. </p>
 
 <p><i>Difficult Terrain</i>: As Dangerous Terrain, but units take damage on a 7+ instead of a 6+. Units that has the 'Walker' special rule, or that moves cautiously, completely ignores Difficult Terrain.</p>
 
-<p><i>Roads</i>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on a road at the start of their action, you may declare they will make a road action. The formation may attempt to do an Engage, Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in the formation must remain on the road during the entire action.</p>
+<p><i>Roads</i>: Units that spend a whole move on a road may add 5cms to their move (does not apply to non-standard movement such as counter charges or consolidation movement). In addition, if all of the units in a formation are on a road at the start of their action, you may declare they will make a road action. The formation may attempt to do an Advance, Double or March action, gaining an additional +1 to the activation roll. However, all of the units in the formation must remain on the road during the entire action.</p>
+
+<p><i>Objectives and Impassable Terrain</i>: Objectives may not be placed inside of terrain that is Impassible for any unit type.</p>
 
 <p><i>Skimmers, Support Craft and Impassable Terrain</i>: Skimmers and Support Craft can move over Impassable Terrain, but cannot stop there, not even if the terrain type does not block Line of Sight.</p>
 
@@ -71,8 +73,8 @@
     <tr>
         <th scope="row">Scrub Area</th>
         <td>6+ Cover Save</td>
-        <td>No Effect, and no cover modifier</td>
-        <td>No Effect, and no cover modifier</td>
+        <td>Difficult</td>
+        <td>Difficult</td>
         <td>Yes</td>
     </tr>
     <tr>
@@ -119,7 +121,7 @@
         </tr>
     </tr>
     <tr>
-        <th scope="row">River</th>
+        <th scope="row">Stream / Shallow River</th>
         <td>6+ Cover Save, Difficult</td>
         <td>Difficult</td>
         <td>No Effect</td>
